tests/errors/continue_compilation_4.f90
module continue_compilation_4
    implicit none
    integer, dimension(:,:), allocatable :: array
    logical :: mask(size(array))
end module continue_compilation_4